# vision

./: .gitignore
all/: auto_label_dataset.py  cam_detect.py  cam_detect_openvino.py  manual_label.py  train.py  video_detect.py  video_detect_openvino.py
all/model_openvino/: best.xml
all/my_dataset/: data.yaml
src/: a.txt
src/camera_data_handle/: CMakeLists.txt  Options  package.xml
src/camera_data_handle/config/: param.yaml
src/camera_data_handle/include/PID_predect/: pid_predict.hpp
src/camera_data_handle/include/Yolov8Detector/: Yolov8Detector.h
src/camera_data_handle/include/camera_data_handle/: camera_debug.h  camera_handle.h  detector_backup.h  predict_debug.h  target_predict.h
src/camera_data_handle/include/camera_params/: camera_params.h
src/camera_data_handle/include/kalman/: kalmanbox.h
src/camera_data_handle/include/kalman_moving_target/: kalman.cpp  kalman.hpp  test.cpp
src/camera_data_handle/include/point_tracking/: point_tracking.h
src/camera_data_handle/include/receive_USB_camera/: Camera_driver.cpp  Camera_driver.hpp  receive_USB_camera.hpp
src/camera_data_handle/include/receive_openmv_data/: receive_openmv_data.h
src/camera_data_handle/include/tf_publish/: tf_publish.h
src/camera_data_handle/kernal_msg/: function.cl
src/camera_data_handle/launch/: camera.launch.py  camera_test.launch.py
src/camera_data_handle/model/: best.xml
src/camera_data_handle/src/: backup_debug.cpp  try.cpp
src/camera_data_handle/src/camera_debug/: camera_debug.cpp  predict_debug.cpp
src/camera_data_handle/src/receive_USB_camera/: USB_test.cpp  receive_USB_camera.cpp
src/camera_data_handle/src/receive_openmv_data/: receive_openmv_data.cpp
src/camera_data_handle/src/recieve_data/: Yolov8Detector.cpp  camera_handle.cpp  detector_backup.cpp  pid_predict.cpp  point_tracking.cpp  receive_data.cpp  target_predict.cpp
src/camera_data_handle/src/tf_publish/: calculate_publish.cpp  detect_publish.cpp  tf_publisher.cpp
src/robot_interfaces/: CMakeLists.txt  package.xml
src/robot_interfaces/msg/: ImageLocation.msg  KalmanOutput.msg  Measure.msg  OpenmvInfo.msg  ServoPos.msg
test/: record_video.py
